<resources>
    <string name="app_name">HomeWorkTwo</string>
    <string name="todo">TODO</string>
    <string name="main_username">请输入用户名</string>
    <string name="main_password">请输入密码</string>
    <string name="main_login">登陆</string>
    <string name="main_create">注册</string>
    <string name="main_remember">记住密码</string>
    <string name="create_username_yes">确定注册</string>
    <string name="create_last">取消</string>
</resources>